--- a/scratchpads.conf
+++ b/scratchpads.conf
@@ -4,3 +4,4 @@ $mainMod = Super # super / meta / windows key
 bind = $mainMod+shift, T, exec, pypr toggle telegram
 bind = $mainMod+shift, s, exec, pypr toggle spotify
 bind = $mainMod+shift, f, exec, pypr toggle slack
+bind = $mainMod+shift, a, exec, pypr toggle pavucontrol easyeffects
