--- a/hyprland.conf
+++ b/hyprland.conf
@@ -40,6 +40,7 @@ exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
 exec-once = pypr
 exec-once = gitwatch -r origin /home/consoli/projects/brainiac/ &
+exec-once = easyeffects --gapplication-service &
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
@@ -65,6 +66,7 @@ env = GDK_SCALE,1
 
 input {
     kb_layout = us
+    kb_variant = intl
     follow_mouse = 1
 
     touchpad {
