--- a/windowrules.conf
+++ b/windowrules.conf
@@ -83,6 +83,11 @@ windowrulev2 = float,class:^(com.github.unrud.VideoDownloader)$ # VideoDownloade
 windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 
+# Make Telegram media windows appear on top
+windowrulev2 = float,class:^(org.telegram.desktop)$,title:^(Media viewer)$
+windowrulev2 = dimaround,class:^(org.telegram.desktop)$,title:^(Media viewer)$
+windowrulev2 = pin,class:^(org.telegram.desktop)$,title:^(Media viewer)$
+
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
