--- a/themes/theme.conf
+++ b/themes/theme.conf
@@ -1,45 +1,67 @@
-#  P̳r̳a̳s̳a̳n̳t̳h̳ R̳a̳n̳g̳a̳n̳
 
-$GTK_THEME = Decay-Green
-$ICON_THEME = Tela-circle-green
-$COLOR_SCHEME = prefer-dark
+$GTK_THEME = Vanta-Black
+$ICON_THEME = Tela-circle-black
+$COLOR_SCHEME=prefer-dark
+$CURSOR_THEME = Bibata-Modern-Ice
+$CURSOR_SIZE=20
+$CODE_THEME=Pure Black
 
-# Optional: The varibles above will be set automatically when the theme is loaded
-# This exec commands will soon be deprecated
-
-exec = gsettings set org.gnome.desktop.interface icon-theme $ICON_THEME
-exec = gsettings set org.gnome.desktop.interface gtk-theme $GTK_THEME
-exec = gsettings set org.gnome.desktop.interface color-scheme $COLOR_SCHEME
+exec = gsettings set org.gnome.desktop.interface icon-theme '$ICON_THEME'
+exec = gsettings set org.gnome.desktop.interface gtk-theme '$GTK_THEME'
+exec = gsettings set org.gnome.desktop.interface color-scheme '$COLOR_SCHEME'
+exec = Hyde cursor theme '$CURSOR_THEME' size $CURSOR_SIZE
+exec = Hyde code theme '$CODE_THEME'
 
 general {
-    gaps_in = 3
-    gaps_out = 8
-    border_size = 2
-    col.active_border = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
-    col.inactive_border = rgba(86aaeccc) rgba(93cee9cc) 45deg
-    layout = dwindle
-    resize_on_border = true
-}
-
-group {
-    col.border_active = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
-    col.border_inactive = rgba(86aaeccc) rgba(93cee9cc) 45deg
-    col.border_locked_active = rgba(90ceaaff) rgba(ecd3a0ff) 45deg
-    col.border_locked_inactive = rgba(86aaeccc) rgba(93cee9cc) 45deg
+    gaps_in = 5
+    gaps_out = 10
+    border_size = 3
+    col.active_border = rgba(ffffffee) rgba(bfbfbfb0) rgba(bfbfbfb0) rgba(ffffffee) 45deg
+    col.inactive_border = rgba(2a2a2ab0) rgba(3c3c3cb0) rgba(3c3c3cb0) rgba(2a2a2ab0) 45deg
+    resize_on_border = yes
 }
 
 decoration {
-    rounding = 10
-    shadow:enabled = false
+    rounding = 6
+    active_opacity = 0.95
+    inactive_opacity = 0.90
 
     blur {
         enabled = yes
         size = 5
         passes = 4
-        new_optimizations = on
-        ignore_opacity = on
+        ignore_opacity = true
+        new_optimizations = true
         xray = false
+        noise = 0.0
+        popups = true
+    }
+
+    dim_inactive = true
+    dim_strength = 0.25
+
+    shadow {
+        enabled = false
+        range = 30
+        scale = 2
+        render_power = 5
+        color = rgba(0f0f0fff)
+        color_inactive = rgba(050505ff)
     }
 }
+
+group {
+    col.border_inactive = rgba(1a1a1ab0)
+    col.border_active = rgba(ffffffee) rgba(bfbfbfb0) rgba(bfbfbfb0) rgba(ffffffee) 45deg
+
+    groupbar {
+      col.active = rgba(bfbfbfcc)
+      col.inactive = rgba(82828299)
+      font_family = JetBrainsMono NFM
+      font_size = 10
+      text_color = rgba(ffffffff)
+    }
+}
+
 
 layerrule = unset,waybar
