Switch to master layout as the default

--- a/keybindings.conf
+++ b/keybindings.conf
@@ -121,6 +121,10 @@ bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 #bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
 bind = $mainMod, b, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
 
+bind = $mainMod, comma, layoutmsg, swapwithmaster master
+bind = $mainMod+Shift, equal, layoutmsg, addmaster
+bind = $mainMod, equal, layoutmsg, removemaster
+bind = $mainMod, period, layoutmsg, orientationcycle [left,top,bottom,center]
 
 # Resize windows
 binde = $mainMod+Shift, Right, resizeactive, 20 0
