--- a/themes/theme.conf
+++ b/themes/theme.conf
@@ -13,12 +13,18 @@ exec = Hyde cursor theme '$CURSOR_THEME' size $CURSOR_SIZE
 exec = Hyde code theme '$CODE_THEME'
 
 general {
-    gaps_in = 5
+    layout = master
+    gaps_in = 2
     gaps_out = 10
-    border_size = 3
+    border_size = 2
     col.active_border = rgba(ffffffee) rgba(bfbfbfb0) rgba(bfbfbfb0) rgba(ffffffee) 45deg
     col.inactive_border = rgba(2a2a2ab0) rgba(3c3c3cb0) rgba(3c3c3cb0) rgba(2a2a2ab0) 45deg
     resize_on_border = yes
+}
+
+master {
+    sllow_small_split = true
+    new_status = inherit
 }
 
 decoration {
