--- a/windowrules.conf
+++ b/windowrules.conf
@@ -87,7 +87,9 @@ windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gt
 windowrulev2 = float,class:^(org.telegram.desktop)$,title:^(Media viewer)$
 windowrulev2 = dimaround,class:^(org.telegram.desktop)$,title:^(Media viewer)$
 windowrulev2 = pin,class:^(org.telegram.desktop)$,title:^(Media viewer)$
-
+windowrulev2 = float,class:^(org.telegram.desktop)$,title:^(Choose Files)$
+windowrulev2 = dimaround,class:^(org.telegram.desktop)$,title:^(Choose Files)$
+windowrulev2 = pin,class:^(org.telegram.desktop)$,title:^(Choose Files)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
