--- a/windowrules.conf
+++ b/windowrules.conf
@@ -84,12 +84,11 @@ windowrulev2 = float,class:^(io.gitlab.adhami3310.Impression)$ # Impression-Gtk
 windowrulev2 = float,class:^(io.missioncenter.MissionCenter)$ # MissionCenter-Gtk
 
 # Make Telegram media windows appear on top
-windowrulev2 = float,class:^(org.telegram.desktop)$,title:^(Media viewer)$
-windowrulev2 = dimaround,class:^(org.telegram.desktop)$,title:^(Media viewer)$
-windowrulev2 = pin,class:^(org.telegram.desktop)$,title:^(Media viewer)$
-windowrulev2 = float,class:^(org.telegram.desktop)$,title:^(Choose Files)$
-windowrulev2 = dimaround,class:^(org.telegram.desktop)$,title:^(Choose Files)$
-windowrulev2 = pin,class:^(org.telegram.desktop)$,title:^(Choose Files)$
+windowrulev2 = float,class:^(org.telegram.desktop)$
+windowrulev2 = pin,class:^(org.telegram.desktop)$
+windowrulev2 = dimaround,class:^(org.telegram.desktop)$,title:^(!Telegram)$
+windowrulev2 = size 45% 75%,class:^(org.telegram.desktop)$
+windowrulev2 = move 53% 12.5%,class:^(org.telegram.desktop)$
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
