--- a/hyprland.conf
+++ b/hyprland.conf
@@ -39,7 +39,8 @@ exec-once = wl-paste --type image --watch cliphist store # clipboard store image
 exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
 exec-once = pypr
-exec-once = gitwatch -r origin /home/consoli/projects/brainiac/ &
+exec-once = gitwatch -r origin /home/consoli/projects/brainiac/
+exec-once = hypridle
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
