--- a/scratchpads.conf
+++ b/scratchpads.conf
@@ -5,4 +5,4 @@ bind = $mainMod+shift, T, exec, pypr toggle telegram
 bind = $mainMod+shift, s, exec, pypr toggle spotify
 bind = $mainMod+shift, f, exec, pypr toggle slack
 bind = $mainMod+shift, a, exec, pypr toggle pavucontrol easyeffects
-bind = $mainMod+shift, w, exec, pypr toggle missioncenter
+bind = $mainMod+shift, w, exec, pypr toggle resources
