Zen browser picture-in-picture

--- a/windowrules.conf
+++ b/windowrules.conf
@@ -90,6 +90,11 @@ windowrulev2 = dimaround,class:^(org.telegram.desktop)$,title:^(!Telegram)$
 windowrulev2 = size 45% 75%,class:^(org.telegram.desktop)$
 windowrulev2 = move 53% 12.5%,class:^(org.telegram.desktop)$
 
+# zen picture-in-picture
+windowrulev2 = float,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+windowrulev2 = pin,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+windowrulev2 = size 25% 33%,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
