--- a/windowrules.conf
+++ b/windowrules.conf
@@ -95,6 +95,14 @@ windowrulev2 = float,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
 windowrulev2 = pin,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
 windowrulev2 = size 25% 33%,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
 
+# smart gaps
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
 
