--- a/themes/theme.conf
+++ b/themes/theme.conf
@@ -1,10 +1,10 @@
 
-$GTK_THEME = Vanta-Black
-$ICON_THEME = Tela-circle-black
-$COLOR_SCHEME=prefer-dark
-$CURSOR_THEME = Bibata-Modern-Ice
+$GTK_THEME = Catppuccin-Latte
+$ICON_THEME = Papirus-Latte
+$COLOR_SCHEME=prefer-light
+$CURSOR_THEME = Bibata-Modern-Classic
 $CURSOR_SIZE=20
-$CODE_THEME=Pure Black
+$CODE_THEME=Catppuccin Latte
 
 exec = gsettings set org.gnome.desktop.interface icon-theme '$ICON_THEME'
 exec = gsettings set org.gnome.desktop.interface gtk-theme '$GTK_THEME'
@@ -13,13 +13,13 @@ exec = Hyde cursor theme '$CURSOR_THEME' size $CURSOR_SIZE
 exec = Hyde code theme '$CODE_THEME'
 
 general {
-    layout = master
     gaps_in = 2
-    gaps_out = 10
+    gaps_out = 8
     border_size = 2
-    col.active_border = rgba(ffffffee) rgba(bfbfbfb0) rgba(bfbfbfb0) rgba(ffffffee) 45deg
-    col.inactive_border = rgba(2a2a2ab0) rgba(3c3c3cb0) rgba(3c3c3cb0) rgba(2a2a2ab0) 45deg
-    resize_on_border = yes
+    col.active_border = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.inactive_border = rgba(7287fdcc) rgba(179299cc) 45deg
+    layout = master
+    resize_on_border = true
 }
 
 master {
@@ -27,47 +27,31 @@ master {
     new_status = inherit
 }
 
+group {
+    col.border_active = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.border_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
+    col.border_locked_active = rgba(dc8a78ff) rgba(8839efff) 45deg
+    col.border_locked_inactive = rgba(7287fdcc) rgba(179299cc) 45deg
+}
+
 decoration {
     rounding = 6
-    active_opacity = 0.95
     inactive_opacity = 0.90
-
-    blur {
-        enabled = yes
-        size = 5
-        passes = 4
-        ignore_opacity = true
-        new_optimizations = true
-        xray = false
-        noise = 0.0
-        popups = true
-    }
-
     dim_inactive = true
     dim_strength = 0.25
 
+    blur {
+        enabled = yes
+        size = 8
+        passes = 4
+        new_optimizations = on
+        ignore_opacity = on
+        xray = false
+    }
+
     shadow {
         enabled = false
-        range = 30
-        scale = 2
-        render_power = 5
-        color = rgba(0f0f0fff)
-        color_inactive = rgba(050505ff)
     }
 }
 
-group {
-    col.border_inactive = rgba(1a1a1ab0)
-    col.border_active = rgba(ffffffee) rgba(bfbfbfb0) rgba(bfbfbfb0) rgba(ffffffee) 45deg
-
-    groupbar {
-      col.active = rgba(bfbfbfcc)
-      col.inactive = rgba(82828299)
-      font_family = JetBrainsMono NFM
-      font_size = 10
-      text_color = rgba(ffffffff)
-    }
-}
-
-
-layerrule = unset,waybar
+layerrule = blur,waybar
