New plugins and a couple small of tweaks

--- a/keybindings.conf
+++ b/keybindings.conf
@@ -119,7 +119,8 @@ bind = $mainMod, home, exec, swaylock # launch lock screen
 bind = $mainMod, s, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 #bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
-bind = $mainMod, b, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
+#bind = $mainMod, b, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
+bind = $mainMod, b, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh)
 
 bind = $mainMod, comma, layoutmsg, swapwithmaster master
 bind = $mainMod+Shift, equal, layoutmsg, addmaster
@@ -168,4 +169,11 @@ bind = $mainMod, V, exec, pkill -x rofi || $scrPath/cliphist.sh c # launch clipb
 bind = $mainMod+Shift, V, exec, pkill -x rofi || $scrPath/cliphist.sh # launch clipboard Manager
 #bind = $mainMod, K, exec, $scrPath/keyboardswitch.sh # switch keyboard layout
 bind = $mainMod, slash, exec, pkill -x rofi || $scrPath/keybinds_hint.sh c # launch keybinds hint
- 
+
+# expose
+bind = $mainMod+alt, e, exec, pypr expose
+
+# magnify
+bind = $mainMod+ctrl, equal, exec, pypr zoom ++0.5
+bind = $mainMod, underscore, exec, pypr zoom --0.5
+bind = $mainMod+ctrl, 0, exec, pypr zoom
