--- a/themes/theme.conf
+++ b/themes/theme.conf
@@ -1,7 +1,7 @@
 
 $GTK_THEME = Catppuccin-Latte
 $ICON_THEME = Papirus-Latte
-$COLOR_SCHEME=prefer-light
+$COLOR_SCHEME=prefer-dark
 $CURSOR_THEME = Bibata-Modern-Classic
 $CURSOR_SIZE=20
 $CODE_THEME=Catppuccin Latte
@@ -36,9 +36,9 @@ group {
 
 decoration {
     rounding = 6
-    inactive_opacity = 0.90
+    #inactive_opacity = 0.9
     dim_inactive = true
-    dim_strength = 0.25
+    dim_strength = 0.08
 
     blur {
         enabled = yes
