--- a/windowrules.conf
+++ b/windowrules.conf
@@ -91,9 +91,9 @@ windowrulev2 = size 45% 75%,class:^(org.telegram.desktop)$
 windowrulev2 = move 53% 12.5%,class:^(org.telegram.desktop)$
 
 # zen picture-in-picture
-windowrulev2 = float,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
-windowrulev2 = pin,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
-windowrulev2 = size 25% 33%,class:^(zen-alpha)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(zen-beta)$,title:^(Picture-in-Picture)$
+windowrulev2 = pin,class:^(zen-beta)$,title:^(Picture-in-Picture)$
+windowrulev2 = size 25% 33%,class:^(zen-beta)$,title:^(Picture-in-Picture)$
 
 # smart gaps
 workspace = w[tv1], gapsout:0, gapsin:0
@@ -102,6 +102,9 @@ windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
 windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
+
+# pypr expose
+workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5
 
 # █░░ ▄▀█ █▄█ █▀▀ █▀█   █▀█ █░█ █░░ █▀▀ █▀
 # █▄▄ █▀█ ░█░ ██▄ █▀▄   █▀▄ █▄█ █▄▄ ██▄ ▄█
