--- a/windowrules.conf
+++ b/windowrules.conf
@@ -94,6 +94,8 @@ windowrulev2 = move 53% 12.5%,class:^(org.telegram.desktop)$
 windowrulev2 = float,class:^(zen-beta)$,title:^(Picture-in-Picture)$
 windowrulev2 = pin,class:^(zen-beta)$,title:^(Picture-in-Picture)$
 windowrulev2 = size 25% 33%,class:^(zen-beta)$,title:^(Picture-in-Picture)$
+windowrulev2 = move 74% 4%,title:^(Picture-in-Picture)$
+windowrulev2 = noinitialfocus,title:^(Picture-in-Picture)$
 
 # smart gaps
 workspace = w[tv1], gapsout:0, gapsin:0
