Change common bindings to better fit split kb

--- a/keybindings.conf
+++ b/keybindings.conf
@@ -108,7 +108,7 @@ bind = $mainMod, k, movefocus, r
 bind = $mainMod+shift, j, movewindow, l
 bind = $mainMod+shift, k, movewindow, r
 
-bind = $mainMod, t, togglefloating,
+bind = $mainMod+shift, t, togglefloating,
 
 # Window/Session actions
 bindd = $mainMod+Shift, P,Color Picker , exec, hyprpicker -a # Pick color (Hex) >> clipboard# 
@@ -116,7 +116,7 @@ bindd = $mainMod+Shift, P,Color Picker , exec, hyprpicker -a # Pick color (Hex) 
 bind = $mainMod, Delete, exit, # kill hyprland session
 bind = $mainMod, G, togglegroup, # toggle the window between focus and group
 bind = $mainMod, home, exec, swaylock # launch lock screen
-bind = $mainMod, s, exec, $scrPath/windowpin.sh # toggle pin on focused window
+bind = $mainMod+shift, s, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 #bind = Ctrl+Alt, W, exec, killall waybar || (env reload_flag=1 $scrPath/wbarconfgen.sh) # toggle waybar and reload config
 #bind = $mainMod, b, exec, killall waybar || waybar # toggle waybar without reloading, this is faster
