--- a/hyprland.conf
+++ b/hyprland.conf
@@ -40,7 +40,7 @@ exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
 exec-once = pypr
 exec-once = gitwatch -r origin /home/consoli/projects/brainiac/
-exec-once = hypridle
+#exec-once = hypridle
 
 # █▀▀ █▄░█ █░█
 # ██▄ █░▀█ ▀▄▀
