--- a/scratchpads.conf
+++ b/scratchpads.conf
@@ -1,8 +1,8 @@
 
 $mainMod = Super # super / meta / windows key
 
-bind = $mainMod+shift, T, exec, pypr toggle telegram
-bind = $mainMod+shift, s, exec, pypr toggle spotify
-bind = $mainMod+shift, f, exec, pypr toggle slack
-bind = $mainMod+shift, a, exec, pypr toggle pavucontrol easyeffects
+bind = $mainMod, T, exec, pypr toggle telegram
+bind = $mainMod, s, exec, pypr toggle spotify
+bind = $mainMod, f, exec, pypr toggle slack
+bind = $mainMod, a, exec, pypr toggle pavucontrol easyeffects
 bind = $mainMod+shift, w, exec, pypr toggle resources
