--- a/hyprland.conf
+++ b/hyprland.conf
@@ -40,6 +40,8 @@ exec-once = $scrPath/swwwallpaper.sh # start wallpaper daemon
 exec-once = $scrPath/batterynotify.sh # battery notification
 exec-once = pypr
 exec-once = gitwatch -r origin /home/consoli/projects/brainiac/
+exec-once = stretchly
+exec-once = flameshot
 #exec-once = hypridle
 
 # █▀▀ █▄░█ █░█
@@ -74,8 +76,12 @@ input {
     }
 
     sensitivity = 0
-    force_no_accel = 1
+    force_no_accel = 0
     numlock_by_default = true
+}
+
+cursor {
+    no_hardware_cursors = true
 }
 
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing
