--- a/keybindings.conf
+++ b/keybindings.conf
@@ -94,6 +94,7 @@ binded = $mainMod SHIFT $CONTROL, down,Move activewindow to the right,exec, $mov
 
 # screenshot
 bindd = $mainMod, i, ScreenShot, exec, grimblast copy area
+bindd = $mainMod+Shift, i, flameshot, exec, flameshot gui
 
 # apps
 bind = $mainMod, semicolon, exec, emacsclient -c
