--- a/scratchpads.conf
+++ b/scratchpads.conf
@@ -6,3 +6,4 @@ bind = $mainMod, s, exec, pypr toggle spotify
 bind = $mainMod, f, exec, pypr toggle slack
 bind = $mainMod, a, exec, pypr toggle pavucontrol easyeffects
 bind = $mainMod+shift, w, exec, pypr toggle resources
+bind = $mainMod+shift, Return, exec, pypr toggle term
