--- a/windowrules.conf
+++ b/windowrules.conf
@@ -10,7 +10,7 @@ windowrulev2 = opacity 0.80 0.80,class:^(code-oss)$
 windowrulev2 = opacity 0.80 0.80,class:^([Cc]ode)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-url-handler)$
 windowrulev2 = opacity 0.80 0.80,class:^(code-insiders-url-handler)$
-windowrulev2 = opacity 0.80 0.80,class:^(kitty)$
+windowrulev2 = opacity 0.98 0.95,class:^(kitty)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.dolphin)$
 windowrulev2 = opacity 0.80 0.80,class:^(org.kde.ark)$
 windowrulev2 = opacity 0.80 0.80,class:^(nwg-look)$
@@ -27,17 +27,17 @@ windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.gtk
 windowrulev2 = opacity 0.80 0.70,class:^(org.freedesktop.impl.portal.desktop.hyprland)$
 windowrulev2 = opacity 0.70 0.70,class:^([Ss]team)$
 windowrulev2 = opacity 0.70 0.70,class:^(steamwebhelper)$
-windowrulev2 = opacity 0.90 0.90,class:^([Ss]potify)$
-windowrulev2 = opacity 0.90 0.90,initialTitle:^(Spotify Free)$
-windowrulev2 = opacity 0.90 0.90,initialTitle:^(Spotify Premium)$
+windowrulev2 = opacity 0.96 0.96,class:^([Ss]potify)$
+windowrulev2 = opacity 0.96 0.96,initialTitle:^(Spotify Free)$
+windowrulev2 = opacity 0.96 0.96,initialTitle:^(Spotify Premium)$
 
 windowrulev2 = opacity 0.90 0.90,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(com.github.tchx84.Flatseal)$ # Flatseal-Gtk
 windowrulev2 = opacity 0.80 0.80,class:^(hu.kramo.Cartridges)$ # Cartridges-Gtk
-windowrulev2 = opacity 0.80 0.80,class:^(com.obsproject.Studio)$ # Obs-Qt
+windowrulev2 = opacity 0.98 0.95,class:^(com.obsproject.Studio)$ # Obs-Qt
 windowrulev2 = opacity 0.80 0.80,class:^(gnome-boxes)$ # Boxes-Gtk
-windowrulev2 = opacity 0.80 0.80,class:^(vesktop)$ # Vesktop
-windowrulev2 = opacity 0.80 0.80,class:^(discord)$ # Discord-Electron
+windowrulev2 = opacity 0.98 0.95,class:^(vesktop)$ # Vesktop
+#windowrulev2 = opacity 0.95 0.95,class:^(discord)$ # Discord-Electron
 windowrulev2 = opacity 0.80 0.80,class:^(WebCord)$ # WebCord-Electron
 windowrulev2 = opacity 0.80 0.80,class:^(ArmCord)$ # ArmCord-Electron
 windowrulev2 = opacity 0.80 0.80,class:^(app.drey.Warp)$ # Warp-Gtk
@@ -56,9 +56,6 @@ windowrulev2 = float,class:^(org.kde.dolphin)$,title:^(Copying — Dolphin)$
 windowrulev2 = float,title:^(About Mozilla Firefox)$
 windowrulev2 = float,class:^(firefox)$,title:^(Picture-in-Picture)$
 windowrulev2 = float,class:^(firefox)$,title:^(Library)$
-windowrulev2 = float,class:^(kitty)$,title:^(top)$
-windowrulev2 = float,class:^(kitty)$,title:^(btop)$
-windowrulev2 = float,class:^(kitty)$,title:^(htop)$
 windowrulev2 = float,class:^(vlc)$
 windowrulev2 = float,class:^(kvantummanager)$
 windowrulev2 = float,class:^(qt5ct)$
@@ -70,6 +67,7 @@ windowrulev2 = float,class:^(blueman-manager)$
 windowrulev2 = float,class:^(nm-applet)$
 windowrulev2 = float,class:^(nm-connection-editor)$
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$
+windowrulev2 = float,class:^(vesktop)$
 
 windowrulev2 = float,class:^(Signal)$ # Signal-Gtk
 windowrulev2 = float,class:^(com.github.rafostar.Clapper)$ # Clapper-Gtk
@@ -91,9 +89,9 @@ windowrulev2 = size 45% 75%,class:^(org.telegram.desktop)$
 windowrulev2 = move 53% 12.5%,class:^(org.telegram.desktop)$
 
 # zen picture-in-picture
-windowrulev2 = float,class:^(zen-beta)$,title:^(Picture-in-Picture)$
-windowrulev2 = pin,class:^(zen-beta)$,title:^(Picture-in-Picture)$
-windowrulev2 = size 25% 33%,class:^(zen-beta)$,title:^(Picture-in-Picture)$
+windowrulev2 = float,class:^(zen)$,title:^(Picture-in-Picture)$
+windowrulev2 = pin,class:^(zen)$,title:^(Picture-in-Picture)$
+windowrulev2 = size 25% 33%,class:^(zen)$,title:^(Picture-in-Picture)$
 windowrulev2 = move 74% 4%,title:^(Picture-in-Picture)$
 windowrulev2 = noinitialfocus,title:^(Picture-in-Picture)$
 
@@ -113,6 +111,8 @@ workspace = special:exposed,gapsout:60,gapsin:30,bordersize:5
 
 layerrule = blur,rofi
 layerrule = ignorezero,rofi
+layerrule = blur,dunst
+layerrule = ignorezero,dunst
 layerrule = blur,notifications
 layerrule = ignorezero,notifications
 layerrule = blur,swaync-notification-window
