--- a/hyprland.conf
+++ b/hyprland.conf
@@ -16,7 +16,8 @@ $scrPath = $HOME/.local/share/bin # set scripts path
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
-monitor = ,preferred,auto,auto
+monitor = DP-1,highres,0x0,auto
+monitor = HDMI-A-1,highres,1927x1080,1.5
 
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
@@ -42,6 +43,7 @@ exec-once = pypr
 exec-once = gitwatch -r origin /home/consoli/projects/brainiac/
 exec-once = stretchly
 exec-once = flameshot
+exec-once = systemctl --user start hyprpolkitagent
 #exec-once = hypridle
 
 # █▀▀ █▄░█ █░█
