--- a/animations.conf
+++ b/animations.conf
@@ -6,10 +6,12 @@
 
 animations {
     enabled = yes
+    bezier = wksp, 0.2, 0.11, 0, 0.9
     bezier = wind, 0.05, 0.9, 0.1, 1.05
     bezier = winIn, 0.1, 1.1, 0.1, 1.1
     bezier = winOut, 0.3, -0.3, 0, 1
     bezier = liner, 1, 1, 1, 1
+    animation = workspaces, 1, 6, wksp, slidefade
     animation = windows, 1, 6, wind, slide
     animation = windowsIn, 1, 6, winIn, slide
     animation = windowsOut, 1, 5, winOut, slide
